2007-07-15  George Giolfan  <georgegiolfan@yahoo.com>

	* ProgressBarTest.cs: Disabled a buggy test.

2007-07-14  George Giolfan  <georgegiolfan@yahoo.com>

	* Disabled ItemsControl-related tests.

2007-07-13  George Giolfan  <georgegiolfan@yahoo.com>

	* ItemsControlTest.cs: Added some tests.
	* TemsPresenterTest.cs: Added.

2007-07-12  George Giolfan  <georgegiolfan@yahoo.com>

	* ItemContainerGeneratorTest.cs, ItemsPanelTemplateTest: Added.
	* ItemsControlTest.cs: Added some tests.

2007-07-05  George Giolfan  <georgegiolfan@yahoo.com>

	* TabControlTest.cs: Switched to implemented Selector.

2007-07-05  George Giolfan  <georgegiolfan@yahoo.com>

	* TabItemTest.cs: Expanded Selected test.

2007-07-02  George Giolfan  <georgegiolfan@yahoo.com>

	* ProgressBarTest.cs: Added IndicatorLenght test.

2007-07-01  George Giolfan  <georgegiolfan@yahoo.com>

	* TabControlTest.cs, TabItemTest.cs: Added or expanded some test.

2007-06-29  George Giolfan  <georgegiolfan@yahoo.com>

	* TabItemTest.cs: Added a test.

2007-06-29  George Giolfan  <georgegiolfan@yahoo.com>

	* TabControlTest.cs: Added OnMouseLeftButtonDownInCanvas test.

2007-06-29  George Giolfan  <georgegiolfan@yahoo.com>

	* TabControlTest.cs, TabItemTest: Added or expanded some tests.

2007-06-29  George Giolfan  <georgegiolfan@yahoo.com>

	* TabControlTest.cs: Added or expanded some tests.

2007-06-29  George Giolfan  <georgegiolfan@yahoo.com>

	* TabItemTest.cs: Added or expanded some tests.

2007-06-28  George Giolfan  <georgegiolfan@yahoo.com>

	* TabControlTest.cs, TabItemTest.cs: Added or expanded some tests.

2007-06-28  George Giolfan  <georgegiolfan@yahoo.com>

	* GridTest.cs: Added Style test.

2007-06-28  George Giolfan  <georgegiolfan@yahoo.com>

	* TabControlTest.cs: Added or expanded some tests.

2007-06-28  George Giolfan  <georgegiolfan@yahoo.com>

	* ListBoxTest.cs, ListBoxItemTest.cs: Added or expanded some tests.

2007-06-28  George Giolfan  <georgegiolfan@yahoo.com>
